<resources>
    <string name="app_name">MarketList</string>
    <string name="facebook_app_id" translatable="false">1731414480496664</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb1731414480496664</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_main" translatable="false">MarketList</string>
    <string name="title_activity_maps">Map</string>
    <string name="disconnect">Disconnect</string>
    <string name="action_about">About</string>
    <string name="list_name">List Name</string>
    <string name="alert">Alert</string>
    <string name="save">Save</string>
    <string name="developed_by">Developed By:</string>
    <string name="developer" translatable="false">Danilo Clemente Briante</string>
    <string name="version">Version:</string>
    <string name="version_val" translatable="false">1.0.0</string>
    <string name="contact">Contact:</string>
    <string name="tel_number" translatable="false">11 98996-5766</string>
    <string name="login">Login:</string>
    <string name="user">User</string>
    <string name="password">Password:</string>
    <string name="password_hint">Password</string>
    <string name="keep_connected">Keep Connected</string>
    <string name="register">Register</string>
    <string name="login_btn">Login</string>
    <string name="item_name">Item Name</string>
    <string name="price">Price</string>
    <string name="quantity">Quantity</string>
    <string name="price_tv">Price:</string>
    <string name="quantity_tv">Quantity:</string>
    <string name="menu_new_list">New List</string>
    <string name="menu_another_lists">Another Lists</string>
    <string name="menu_show_markets">Show Markets</string>
    <string name="name_tv">Name:</string>
    <string name="share_tv">Share:</string>
    <string name="item_tv">Item:</string>
    <string name="facebook_connected">Facebook Connected</string>
    <string name="invalid_user">Invalid User</string>
    <string name="error">Error</string>
    <string name="please_insert_name_to_list">Please insert a name to the list</string>
    <string name="item_updated">Item updated</string>
    <string name="item_update_error">Item update error</string>
    <string name="empty_name">Name cannot be empty</string>
    <string name="item_registered">Item registered</string>
    <string name="user_register_success">User registered</string>
    <string name="register_error">Register Error</string>
    <string name="pass_empty_register">Register error: pass can`t be null</string>
    <string name="register_error_user_empty">Register Error: user can`t be empty</string>
    <string name="user_registered">User registered success</string>
    <string name="error_user_exists">User already in DB</string>
    <string name="error_server_off">Error server is off</string>
    <string name="nearby_market">Nearby Market</string>
    <string name="current_position">Current Position</string>
    <string name="permission_denied">permission denied</string>
    <string name="map_error">There is an error</string>
    <string name="speakItemName">Speak the Item Name</string>
    <string name="not_supported">Not supported</string>
</resources>
