<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/list_gradient"
    tools:context="com.clemente.danilo.androiddevelopment.activity.NovaListaActivity">
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/list_name"
        android:textColorHint="@color/text_color"
        android:textColor="@color/text_color"
        android:id="@+id/etListName"
        tools:layout_editor_absoluteY="0dp"
        tools:layout_editor_absoluteX="8dp" />
    <LinearLayout
        android:layout_marginTop="10sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        tools:layout_editor_absoluteY="0dp"
        tools:layout_editor_absoluteX="8dp">
        <CheckBox
            android:gravity="center"
            android:layout_marginLeft="230dp"
            android:layout_width="40sp"
            android:id="@+id/chkAlert"
            android:textColor="@color/text_color"
            android:layout_height="20sp" />
        <TextView
            android:gravity="center"
            android:layout_gravity="right"
            android:layout_width="wrap_content"
            android:textColor="@color/text_color"
            android:layout_height="wrap_content"
            android:text="@string/alert"/>
    </LinearLayout>
    <Button
        android:layout_marginTop="20sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:onClick="salvarLista"/>
</LinearLayout>
