<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/list_gradient"
    android:textColor="@color/text_color"
    tools:context="com.clemente.danilo.androiddevelopment.activity.NovoItemActivity">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="28dp"
        android:textColor="@color/text_color"
        android:id="@+id/novoItemNomeLista"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/text_color"
            android:hint="@string/item_name"
            android:layout_weight="0.9"
            android:textColor="@color/text_color"
            android:id="@+id/novoItemNomeItem"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:id="@+id/ivVoice"
            android:onClick="speak"
            android:src="@drawable/ic_voice"/>
    </LinearLayout>

    <EditText
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@color/text_color"
        android:hint="@string/price"
        android:inputType="numberDecimal"
        android:textColor="@color/text_color"
        android:id="@+id/novoItemPreco"/>
    <EditText
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@color/text_color"
        android:hint="@string/quantity"
        android:inputType="number"
        android:textColor="@color/text_color"
        android:id="@+id/novoItemQtt"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="home"
            android:src="@drawable/ic_back"
            android:onClick="home"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.4"/>
        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:text="Save"
            android:src="@drawable/add"
            android:onClick="saveItem"/>
    </LinearLayout>


</LinearLayout>
